# py_clean_arch

./: .flake8  .pre-commit-config.yaml  .pylintrc  pyproject.toml
src/infra/config/: db_config.py
src/infra/enitites/: __init__.py  pets.py  users.py
