[tool.poetry]
name = "py_clean_arch"
version = "0.1.0"
description = ""
authors = ["Thiago Moura <thmoura14@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]
pylint = "^2.14.4"
black = "^22.6.0"
flake8 = "^4.0.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
